frontend/src/components/header/Header.css
.header {
  width: 100%;
  padding: 4px 5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--primary-color);
  color: var(--secondary-color);
  position: fixed;
  height: 60px;
}

